--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/cli": "^6.2.9",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/animations": "8.2.14",
+    "@angular/cli": "^8.3.25",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/geolocation": "^4.20.0",
     "@ionic-native/splash-screen": "~4.15.0",
@@ -37,13 +36,16 @@
     "cordova-sqlite-storage": "2.5.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.5.4",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "tslib": "^1.9.0",
+    "typescript": "^3.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.25",
     "@ionic/app-scripts": "^3.2.4",
-    "typescript": "~2.6.2"
+    "codelyzer": "^5.0.1"
   },
   "description": "An Ionic project",
   "cordova": {
