--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
     "sw-toolbox": "3.6.0",
     "tslib": "^1.9.0",
     "typescript": "^3.5.3",
