--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.5.2",
-    "ionic-angular": "3.9.2",
+    "ionic-angular": "^3.9.9",
     "ionicons": "3.0.0",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
