--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
-    "@angular/animations": "8.2.14",
-    "@angular/cli": "^8.3.25",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@ionic-native/core": "~4.15.0",
-    "@ionic-native/geolocation": "^4.20.0",
-    "@ionic-native/splash-screen": "~4.15.0",
-    "@ionic-native/status-bar": "~4.15.0",
+    "@angular/animations": "^11.0.5",
+    "@angular/cli": "^11.0.5",
+    "@angular/common": "^11.0.5",
+    "@angular/compiler": "^11.0.5",
+    "@angular/compiler-cli": "^11.0.5",
+    "@angular/core": "^11.0.5",
+    "@angular/forms": "^11.0.5",
+    "@angular/platform-browser": "^11.0.5",
+    "@angular/platform-browser-dynamic": "^11.0.5",
+    "@ionic-native/core": "^5.30.0",
+    "@ionic-native/geolocation": "^5.30.0",
+    "@ionic-native/splash-screen": "^5.30.0",
+    "@ionic-native/status-bar": "^5.30.0",
     "@ionic/storage": "^2.2.0",
-    "cordova-android": "8.1.0",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "4.0.1",
@@ -35,19 +34,20 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.5.2",
-    "ionic-angular": "^3.9.9",
+    "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.4",
     "sw-toolbox": "3.6.0",
     "tslib": "^1.9.0",
-    "typescript": "^3.5.3",
-    "zone.js": "~0.9.1"
+    "typescript": "^4.0.5",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
+    "@angular-devkit/build-angular": "^0.1100.5",
     "@ionic/app-scripts": "^3.2.4",
-    "codelyzer": "^5.0.1"
+    "codelyzer": "^6.0.1"
   },
   "description": "An Ionic project",
   "cordova": {
